--- a/box-sizing.css
+++ b/box-sizing.css
@@ -15,3 +15,9 @@
      -moz-box-sizing: border-box;
           box-sizing: border-box;
 }
+
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
