--- a/inline-block.css
+++ b/inline-block.css
@@ -4,3 +4,14 @@
   height: 100px;
   margin: 1em;
 }
+
+nav {
+  display: inline-block;
+  vertical-align: top;
+  width: 25%;
+}
+.column {
+  display: inline-block;
+  vertical-align: top;
+  width: 75%;
+}
